[package]
name = "floodgate"
version = "0.1.1"
edition = "2021"
description = "A ratelimiting implementation designed for high throughput."
license = "The Unlicense"
respository = "https://github.com/circuitsacul/floodgate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
tokio = { version = "1.22.0", optional = true, features = ["sync", "rt"] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
