[package]
name = "floodgate"
version = "0.2.2"
edition = "2021"
description = "A ratelimiting implementation designed for high throughput."
license = "Unlicense"
respository = "https://github.com/circuitsacul/floodgate"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
